# dsa-visualizer-engine

./: .gitignore  ASCII_VISUALS.md  LICENSE  README.md  main.py  pyproject.toml
dsa_visualizer/: main.py
dsa_visualizer/algorithms/: __init__.py  runner.py  types.py
dsa_visualizer/core/: executor.py  input_accumulator.py  snapshotter.py  structures.py  types.py
dsa_visualizer/render/: array.py  binary_search_tree.py  binary_tree.py  doubly_linked_list.py  hashmap.py  (+5 more)
man/: dsa.1
tests/: test_algorithm_mode_state.py  test_algorithm_panel.py  test_algorithm_runner.py  test_algorithm_styles.py  test_algorithm_types.py  test_binary_search.py  test_binary_tree_ops.py  test_bst_ops.py  test_cell_expand.py  test_compile_blocks.py  test_doubly_linked_list.py  test_executor.py  test_executor_tree_search.py  test_exponential_search.py  test_highlight_markers.py  test_imports.py  test_input_area.py  test_input_utils.py  test_integration_algorithms.py  test_interpolation_search.py  test_jump_search.py  test_linear_search.py  test_notebook_store.py  test_render_array_golden.py  test_render_array_highlights.py  test_render_binary_tree_golden.py  test_render_bst_golden.py  test_render_dict_golden.py  test_render_doubly_linked_list_golden.py  test_render_graph_golden.py  test_render_linked_list_golden.py  test_render_min_heap_golden.py  test_render_primitives.py  test_render_queue_golden.py  test_render_stack_golden.py  test_render_tree_highlights.py  test_search_command.py  test_snapshot_binary_tree_structural.py  test_snapshot_ids.py  test_snapshot_linked_list_structural.py  (+4 more)
(+29 files in other folders)
