[project]
name = "dsa-visualizer-engine"
version = "0.1.0"
description = "Terminal-based interactive notebook that visualizes data structures as live ASCII diagrams"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["textual", "rich"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dsa = "dsa_visualizer.main:main"
